# loom_bot

./: .env  BUILD_FIX_INSTRUCTIONS.md  COMPREHENSIVE_FIX_SUMMARY.md  Cargo.toml  Cargo.toml.bak  Dockerfile  Dockerfile.ethereum  Dockerfile.fixed  ENHANCED_FEATURES.md  ENHANCED_FEATURES_NEW.md  ETHEREUM_MIGRATION_SUMMARY.md  ETHEREUM_SETUP.md  FINAL_FIX_SUMMARY.md  FINAL_REPORT.md  FIXED_BUILD_SUMMARY.md  LICENSE.md  README.docker.md  RUNTIME_FIXES.md  aerodrome_fixed.txt  apply_env_fixes.bat  apply_fixes.bat  apply_fixes.sh  baseswap_fixed.txt  config-example.toml  config-multi-network-example.toml  config_base.toml  config_ethereum.toml  docker-build.bat  docker-build.sh  docker-compose.yml  env_fixes.txt  environment.rs  environment_fix.rs  fix_all_issues.sh  fix_build.sh  fix_compilation_errors.sh  fix_protocol_files.bat  fixed_environment.rs  mode_fix.txt  northflank.yaml  (+12 more)
.github/workflows/: docker-build.yml
.zencoder/docs/: repo.md
book/: getting_started.md
book/tips_and_tricks/: address_book.md
contracts/: LoomMulticaller.sol  README.md  deploy_multicaller.js  test_multicaller.js
crates/broadcast/accounts/: Cargo.toml
crates/broadcast/accounts/src/accounts_monitor/: accounts_actor.rs
crates/broadcast/accounts/src/signers/: initialize_actor.rs  signers_actor.rs
crates/broadcast/broadcaster/: Cargo.toml
crates/broadcast/broadcaster/src/: anvil.rs  flashbots.rs
crates/core/actors/src/: actor.rs  actor_manager.rs  lib.rs
crates/core/actors/src/channels/: broadcaster.rs  keep_alive.rs  mod.rs
crates/core/block-history-actor/: Cargo.toml
crates/core/block-history-actor/src/: block_history_actor.rs  block_history_actor_test.rs
crates/core/blockchain/: Cargo.toml
crates/core/blockchain-actors/: Cargo.toml
crates/core/blockchain-actors-block-history/: Cargo.toml
crates/core/blockchain-actors-block-history/src/: lib.rs
crates/core/blockchain-actors-blockchain/: Cargo.toml
crates/core/blockchain-actors-blockchain/src/: lib.rs
crates/core/blockchain-actors/src/: actor.rs  actor.rs.bak
crates/core/blockchain-shared/: Cargo.toml
crates/core/blockchain-shared/src/: lib.rs
crates/core/blockchain-types/: Cargo.toml
crates/core/blockchain-types/src/: lib.rs
crates/core/blockchain/src/: lib.rs  robust_client.rs
crates/core/router/: Cargo.toml
crates/core/router/src/: lib.rs  swap_router_actor.rs  utils.rs
crates/core/topology/: Cargo.toml
crates/core/topology-shared/: Cargo.toml
crates/core/topology-shared/src/: lib.rs  rate_limited_provider.rs
crates/core/topology/src/: dns_config.rs  lib.rs  rate_limited_provider.rs  topology.rs  topology_config.rs  topology_config_fixed.rs  topology_config_new.rs  ws_config.rs
crates/defi/health-monitor/src/: state_health_monitor.rs  stuffing_tx_monitor.rs
crates/defi/pools/: Cargo.toml
crates/defi/pools/src/protocols/: aerodrome.rs  aerodrome.rs.fixed  baseswap.rs  curve.rs  mod.rs.fixed
crates/defi/preloader/src/: preloader_actor.rs
crates/defi/price/: Cargo.toml
crates/defi/price/src/: lib.rs  price_feed.rs
crates/defi/uniswap-v3-math/src/: swap_math.rs
crates/loom/: Cargo.toml
crates/loom/src/: lib.rs
crates/node/json-rpc/: Cargo.toml
crates/node/json-rpc/src/: enhanced_subscription_manager.rs  node_block_logs_worker.rs  node_block_state_worker.rs  node_block_with_tx_worker.rs  robust_subscription_manager.rs
crates/node/node-player/: Cargo.toml
crates/node/node-player/src/: actor.rs  worker.rs
crates/strategy/backrun/: Cargo.toml
crates/strategy/backrun/src/: arb_actor.rs  backrun_config.rs  backrun_config.rs.fixed  backrun_config.rs.new  capital_manager.rs  lib.rs  mod.rs  pending_tx_state_change_processor.rs  profit_calculator.rs  rate_limited_client.rs  state_change_arb_searcher.rs  swap_calculator.rs
crates/strategy/merger/: Cargo.toml
crates/strategy/merger/src/: diffpath_merger_actor.rs  lib.rs  samepath_merger_actor.rs  swappath_merger_actor.rs  utils.rs
crates/strategy/simple_arb/: Cargo.toml  Cargo.toml.fixed
crates/strategy/simple_arb/src/: lib.rs
crates/strategy/utils/: constants.rs
crates/types/blockchain/src/: base_tx_deserializer.rs  chunked_fetcher.rs  lib.rs
crates/types/entities/: Cargo.toml
crates/types/entities/src/: keystore.rs  market.rs  token.rs
tools/: encrypt_key.rs
tools/encrypt_key/: Cargo.toml
tools/encrypt_key/src/: main.rs
