
[package]
name = "loom-core-block-history-actor"
edition.workspace = true

[lib]
crate_name = "loom_core_block_history_actor"
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-core-blockchain-types = { workspace = true }
loom-evm-db.workspace = true
loom-node-debug-provider.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true
loom-core-blockchain-shared = { path = "../blockchain-shared" }

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true

revm.workspace = true

[features]
default = []

[dev-dependencies]
loom-evm-db.workspace = true
loom-evm-utils.workspace = true

alloy-eips.workspace = true
alloy-node-bindings.workspace = true
alloy-rpc-client.workspace = true
env_logger.workspace = true
