[package]
name = "loom-core-blockchain-shared"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dexloom/loom"

[dependencies]
alloy.workspace = true
influxdb.workspace = true
loom-core-actors.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true
revm.workspace = true
tracing.workspace = true
loom-evm-db.workspace = true
