[package]
name = "loom-core-blockchain-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dexloom/loom"

[dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
loom-types-blockchain = { workspace = true }
loom-types-entities = { workspace = true }
loom-types-events = { workspace = true }
loom-evm-db = { workspace = true }
loom-node-debug-provider = { workspace = true }
revm = { workspace = true }
influxdb.workspace = true
loom-core-actors.workspace = true
loom-core-blockchain.workspace = true
