[package]
name = "loom-core-blockchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-defi-address-book.workspace = true
loom-evm-db.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true

alloy-chains.workspace = true

alloy.workspace = true
eyre.workspace = true
influxdb.workspace = true
revm.workspace = true
tracing.workspace = true

tokio.workspace = true
url.workspace = true
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
# Changed to optional to break cycle
loom-core-topology = { workspace = true, optional = true }

[features]
with-topology = ["loom-core-topology"]

