[package]
name = "loom-core-blockchain"
version = "0.6.0"

[lib]
crate_name = "loom_core_blockchain"
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dexloom/loom"
repository = "https://github.com/dexloom/loom"

[dependencies]
loom-core-topology-shared = { path = "../topology-shared" }
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-core-blockchain-types = { workspace = true }
loom-defi-address-book.workspace = true
loom-evm-db.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true
loom-core-blockchain-shared = { path = "../blockchain-shared" }
loom-core-blockchain-actors-blockchain = { path = "../blockchain-actors-blockchain" }
loom-core-blockchain-actors-block-history = { path = "../blockchain-actors-block-history" }

alloy-chains.workspace = true

alloy.workspace = true
eyre.workspace = true
influxdb.workspace = true
revm.workspace = true
tracing.workspace = true

tokio.workspace = true
url.workspace = true
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
# Changed to optional to break cycle

[features]
default = []
with-block-history = []

