[package]
name = "loom-core-topology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
loom-core-topology-shared = { path = "../topology-shared" }
loom-broadcast-accounts = { workspace = true, optional = true }
loom-broadcast-broadcaster.workspace = true
loom-broadcast-flashbots.workspace = true
loom-core-actors.workspace = true
# Changed to optional to break cycle
loom-core-block-history-actor = { workspace = true, optional = true }
loom-core-blockchain = { workspace = true, optional = true }
loom-core-mempool.workspace = true
loom-core-router.workspace = true
loom-defi-health-monitor.workspace = true
loom-defi-market.workspace = true
loom-defi-pools.workspace = true
loom-defi-preloader.workspace = true
loom-defi-price.workspace = true
loom-evm-db.workspace = true
loom-execution-estimator.workspace = true
loom-execution-multicaller.workspace = true
loom-node-actor-config.workspace = true
loom-node-db-access = { workspace = true, optional = true }
loom-node-grpc.workspace = true
loom-node-grpc-exex-proto.workspace = true
loom-node-json-rpc.workspace = true
loom-rpc-handler.workspace = true
loom-rpc-state.workspace = true
loom-strategy-backrun.workspace = true
loom-strategy-merger.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true

eyre.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
futures.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
alloy-transport-ipc.workspace = true
alloy-transport-ws.workspace = true
url.workspace = true

[features]
default = ["loom-broadcast-accounts"]
db-access = ["dep:loom-node-db-access"]
loom-broadcast-accounts = ["dep:loom-broadcast-accounts"]
loom-core-block-history-actor = ["dep:loom-core-block-history-actor"]
with-blockchain = ["dep:loom-core-blockchain"]
