[package]
name = "loom-strategy-backrun"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-core-blockchain.workspace = true
loom-defi-abi.workspace = true
loom-defi-pools.workspace = true
loom-defi-address-book.workspace = true
loom-evm-db.workspace = true
loom-node-debug-provider.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true

chrono.workspace = true
eyre.workspace = true
influxdb.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
rayon.workspace = true
revm.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"

# alloy
alloy = { version = "0.11.1", features = ["json-rpc"], workspace = true }
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace = "0.11.1"
alloy-transport.workspace = true
alloy-sol-types.workspace = true

futures-util = "0.3"
serde_json = "1.0"

# additional crates for debug provider
futures = "0.3"
bytes = "1.4"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "c6b757e" }
ethers-core = "2.0.14"

[[bench]]
harness = false
name = "swap_calculation_bench"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
